removed OSGi support, updated to latest Spring version

--- a/org.openwms.app/org.openwms.app.plan/pom.xml
+++ b/org.openwms.app/org.openwms.app.plan/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.app</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.app.plan</artifactId>
     <packaging>pom</packaging>
