--- a/org.openwms.common/org.openwms.common.flex.lib/pom.xml
+++ b/org.openwms.common/org.openwms.common.flex.lib/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.common</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.common.flex.lib</artifactId>
     <version>${flex.client.version}</version>
