--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
     <packaging>jar</packaging>
@@ -45,13 +45,16 @@
           </resource>
         </resources>
     </build>
+
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.spring-library</artifactId>
-            <type>libd</type>
-            <scope>${dependency.scope}</scope>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
     </dependencies>
 </project>
