--- a/org.openwms.app/org.openwms.app.par/pom.xml
+++ b/org.openwms.app/org.openwms.app.par/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.app</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.app.par</artifactId>
     <packaging>par</packaging>
