--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -28,42 +28,24 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.common</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.common.comm</artifactId>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.springsource.bundlor</groupId>
-                <artifactId>com.springsource.bundlor.maven</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>bundlor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.spring-library</artifactId>
-            <type>libd</type>
-            <scope>${dependency.scope}</scope>
+            <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-ip</artifactId>
             <version>${spring.integration.version}</version>
-            <scope>${dependency.scope}</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework.retry</groupId>
@@ -76,7 +58,6 @@
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
             <version>1.0.2.RELEASE</version>
-            <scope>${dependency.scope}</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -89,7 +70,6 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
-            <scope>${dependency.scope}</scope>
         </dependency>
     </dependencies>
 </project>
