--- a/org.openwms.common/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms.common/org.openwms.common.integration.jpa/pom.xml
@@ -28,14 +28,13 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.common</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.common.integration.jpa</artifactId>
-    <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
-        <openwms.configuration.version>0.2-SNAPSHOT</openwms.configuration.version>
+        <openwms.configuration.version>0.2</openwms.configuration.version>
     </properties>
     <build>
         <resources>
@@ -44,64 +43,43 @@
             <filtering>true</filtering>
           </resource>
         </resources>
-        <plugins>
-            <plugin>
-                <groupId>com.springsource.bundlor</groupId>
-                <artifactId>com.springsource.bundlor.maven</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>bundlor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.spring-library</artifactId>
-            <type>libd</type>
-            <scope>${dependency.scope}</scope>
+            <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.instrument</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>spring-instrument</artifactId>
         </dependency>
 
-        <!-- JEE API -->
+        <!-- JavaEE API -->
         <dependency>
             <groupId>javax.transaction</groupId>
-            <artifactId>com.springsource.javax.transaction</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>jta</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- JPA Provider -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Weaver -->
         <dependency>
             <groupId>org.aspectj</groupId>
-            <artifactId>com.springsource.org.aspectj.weaver</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>aspectjweaver</artifactId>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
-            <artifactId>com.springsource.org.aspectj.runtime</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>aspectjrt</artifactId>
         </dependency>
 
         <!-- CORE Project dependencies -->
@@ -109,50 +87,37 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration.jpa</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
-            <version>${core.version}</version>
-            <type>properties</type>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.integration</artifactId>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
-            <scope>${dependency.scope}</scope>
         </dependency>
 
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.test</artifactId>
+            <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
