--- a/org.openwms.common/org.openwms.common.service.api/pom.xml
+++ b/org.openwms.common/org.openwms.common.service.api/pom.xml
@@ -28,49 +28,30 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.common</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.common.service.api</artifactId>
-    <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.springsource.bundlor</groupId>
-                <artifactId>com.springsource.bundlor.maven</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>bundlor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <!-- CORE Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
 	    <dependency>
 	        <groupId>${project.groupId}</groupId>
 	        <artifactId>org.openwms.core.service.api</artifactId>
 	        <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
 	    </dependency>
         
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
-            <scope>${dependency.scope}</scope>
         </dependency>
     </dependencies>
 </project>
