--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -28,17 +28,16 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.common</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org COMMON</name>
     <properties>
         <moduleDir>../..</moduleDir>
-        <core.version>0.2-SNAPSHOT</core.version>
-        <module.version>0.2-SNAPSHOT</module.version>
-        <bundle.version>0.2.SNAPSHOT</bundle.version>
+        <core.version>0.2</core.version>
+        <module.version>0.2</module.version>
     </properties>
 
     <distributionManagement>
@@ -50,18 +49,16 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:git:ssh://git@bitbucket.org/openwms-sources/org.openwms.git</connection>
-        <developerConnection>scm:git:ssh://git@bitbucket.org/openwms-sources/org.openwms.git</developerConnection>
-        <url>https://bitbucket.org/openwms-sources/org.openwms.git</url>
+        <url>https://github.com/openwms/org.openwms</url>
+        <connection>scm:git:git://github.com/openwms/org.openwms.git</connection>
+        <developerConnection>scm:git:git@github.com:openwms/org.openwms.git</developerConnection>
     </scm>
 
     <profiles>
         <profile>
             <id>all</id>
             <activation>
-                <property>
-                    <name>!top</name>
-                </property>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
                 <module>org.openwms.common.comm</module>
@@ -90,7 +87,6 @@
             <activation>
                 <property>
                     <name>flex</name>
-                    <value>true</value>
                 </property>
             </activation>
             <modules>
@@ -111,7 +107,6 @@
             <activation>
                 <property>
                     <name>angularjs</name>
-                    <value>true</value>
                 </property>
             </activation>
             <modules>
