--- a/org.openwms.core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain.as/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.core</artifactId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.2</version>
 	</parent>
 	<artifactId>org.openwms.core.domain.as</artifactId>
     <version>${flex.client.version}</version>
