--- a/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
     <packaging>properties</packaging>
