--- a/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>0.2-SNAPSHOT</version>
+        <version>0.2</version>
     </parent>
     <artifactId>org.openwms.core.integration.eclipselink</artifactId>
     <packaging>jar</packaging>
@@ -36,80 +36,53 @@
     <description>Packages Spring configuration that starts a JPA EntityManagerFactory with Eclipselink.</description>
     <properties>
         <moduleDir>../..</moduleDir>
+        <org.eclipse.persistence.version>2.4.2</org.eclipse.persistence.version>
     </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.springsource.bundlor</groupId>
-                <artifactId>com.springsource.bundlor.maven</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>bundlor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.spring-library</artifactId>
-            <type>libd</type>
-            <scope>${dependency.scope}</scope>
+            <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.instrument</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>spring-instrument</artifactId>
         </dependency>
 
         <!-- JPA Provider -->
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa</artifactId>
-            <version>2.4.2</version>
-            <scope>${dependency.scope}</scope>
+            <version>${org.eclipse.persistence.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.weaving</artifactId>
-            <version>2.4.2</version>
-            <scope>${dependency.scope}</scope>
+            <version>${org.eclipse.persistence.version}</version>
         </dependency>
 
         <!-- Weaver -->
         <dependency>
             <groupId>org.aspectj</groupId>
-            <artifactId>com.springsource.org.aspectj.weaver</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>aspectjweaver</artifactId>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
-            <artifactId>com.springsource.org.aspectj.runtime</artifactId>
-            <scope>${dependency.scope}</scope>
+            <artifactId>aspectjrt</artifactId>
         </dependency>
 
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
-            <version>${project.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration</artifactId>
-            <version>${project.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
-            <version>${project.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
     </dependencies>
 </project>
