--- a/org.openwms.tms/org.openwms.tms.integration/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.integration/pom.xml
@@ -28,59 +28,38 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.tms</artifactId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.2</version>
 	</parent>
 	<artifactId>org.openwms.tms.integration</artifactId>
-	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
 		<moduleDir>../../..</moduleDir>
 	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.springsource.bundlor</groupId>
-				<artifactId>com.springsource.bundlor.maven</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>bundlor</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 	<dependencies>
 		<!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration</artifactId>
             <version>${core.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain</artifactId>
             <version>${common.version}</version>
-            <scope>${dependency.scope}</scope>
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.integration</artifactId>
             <version>${common.version}</version>
-            <scope>${dependency.scope}</scope>
         </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.tms.domain</artifactId>
-            <scope>${dependency.scope}</scope>
 		</dependency>
 	</dependencies>
 </project>
